BUG: 279206

Process KMyMoneyApp::slotTransactionsEnter(void) only once per triggered action.

Backported to the stable branch.

svn path=/branches/stable/extragear-kde4/office/kmymoney/; revision=1248734